[gd_scene load_steps=13 format=3 uid="uid://b146hb34lplj"]

[ext_resource type="Script" uid="uid://cbqr802i45acx" path="res://code/Ghost1.gd" id="1_j04kq"]
[ext_resource type="Texture2D" uid="uid://bvub6hmebar00" path="res://images/enemy.png" id="2_k22qx"]
[ext_resource type="PackedScene" uid="uid://kyilkjpxbnv2" path="res://scenes/stun_animation.tscn" id="3_il4pi"]
[ext_resource type="AudioStream" uid="uid://d26c66olj7ijn" path="res://music/SFX/enemy_damage.mp3" id="4_db11g"]

[sub_resource type="CanvasTexture" id="CanvasTexture_5dnoo"]
diffuse_texture = ExtResource("2_k22qx")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ahmst"]
radius = 18.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_af7kp"]
radius = 18.0
height = 60.0

[sub_resource type="Animation" id="Animation_5uy6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ra3w"]
resource_name = "radius_entered"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.32, 0.32, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4w8v"]
_data = {
&"RESET": SubResource("Animation_5uy6h"),
&"radius_entered": SubResource("Animation_4ra3w")
}

[sub_resource type="Shader" id="Shader_5uy6h"]
code = "shader_type canvas_item;
uniform sampler2D nigger : hint_screen_texture;
void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
    COLOR = texture(TEXTURE, UV);
    float avg = (COLOR.r + COLOR.g + COLOR.b) / 3.0;
    COLOR = texture(nigger, SCREEN_UV);
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xwavj"]
shader = SubResource("Shader_5uy6h")

[node name="CharacterBody2D2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_j04kq")

[node name="Enemy" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("CanvasTexture_5dnoo")

[node name="stun_animation" parent="Enemy" instance=ExtResource("3_il4pi")]
visible = false
position = Vector2(5, -25)
frame = 2
frame_progress = 0.679715

[node name="enemy_hitbox" type="CollisionShape2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-4, 2)
shape = SubResource("CapsuleShape2D_ahmst")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="." groups=["Wrog"]]
wait_time = 0.1
autostart = true

[node name="stun_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Wrog"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(-4, 2)
shape = SubResource("CapsuleShape2D_af7kp")

[node name="Enemy_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_db11g")
volume_db = -7.048

[node name="in_radius" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4w8v")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_xwavj")
offset_left = -29.0
offset_top = -34.0
offset_right = 36.0
offset_bottom = 34.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
